--- a/assets/css/_common.scss
+++ b/assets/css/_common.scss
@@ -23,7 +23,7 @@
   display: inline-block;
   font-family: var(--title-font);
   padding: 1.5rem 3rem;
-
+  margin: 2rem 0;
   font-weight: 600;
 
   background: linear-gradient(to right, var(--orange-color), var(--red-color));
