--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,6 +72,7 @@ body {
   display: inline-block;
   font-family: var(--title-font);
   padding: 1.5rem 3rem;
+  margin: 2rem 0;
   font-weight: 600;
   background: -webkit-gradient(linear, left top, right top, from(var(--orange-color)), to(var(--red-color)));
   background: linear-gradient(to right, var(--orange-color), var(--red-color));
@@ -231,8 +232,19 @@ body {
 
 .banner {
   position: relative;
-  min-height: 100rem;
+  min-height: 110rem;
   overflow: hidden;
+}
+
+.banner::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  width: 100%;
+  height: 0.5rem;
+  -webkit-box-shadow: 0 -0.1rem 1.6rem var(--black-color), 0 -0.2rem 1.6rem var(--black-color), 0 -0.5rem 1.6rem var(--black-color), 0 0.1rem 1.6rem var(--black-color);
+          box-shadow: 0 -0.1rem 1.6rem var(--black-color), 0 -0.2rem 1.6rem var(--black-color), 0 -0.5rem 1.6rem var(--black-color), 0 0.1rem 1.6rem var(--black-color);
 }
 
 .banner .banner__content {
@@ -292,7 +304,7 @@ body {
   position: absolute;
   width: 50rem;
   height: 70rem;
-  top: 75%;
+  top: 58%;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
 }
@@ -307,38 +319,8 @@ body {
           animation-delay: 1s;
 }
 
-.banner #banner-2 {
-  opacity: 0.6;
-  width: 60rem;
-  height: 60rem;
-  mix-blend-mode: soft-light;
-  right: -60rem;
-  top: 60%;
-  -webkit-animation: banner2 0.3s ease forwards;
-          animation: banner2 0.3s ease forwards;
-  -webkit-animation-delay: 1s;
-          animation-delay: 1s;
-}
-
-.banner svg {
-  position: absolute;
-  bottom: 0;
-  z-index: 1;
-}
-
-.banner svg .sub-bg-1 {
-  fill: var(--orange-color);
-}
-
-.banner svg .sub-bg-2 {
-  opacity: 0.6;
-  fill: var(--red-color);
-  -webkit-transform: translateY(-1rem) scale(1, 1.2);
-          transform: translateY(-1rem) scale(1, 1.2);
-}
-
 .about {
-  padding-top: 40rem;
+  padding-top: 30rem;
   position: relative;
 }
 
@@ -349,28 +331,6 @@ body {
 .about .sub-bg:nth-of-type(3) {
   right: -50rem;
   bottom: 0;
-}
-
-.about #sub-bg {
-  position: absolute;
-  width: 100%;
-  top: 0;
-  height: 15rem;
-  background: -webkit-gradient(linear, left top, left bottom, from(var(--orange-color)), to(transparent));
-  background: linear-gradient(to bottom, var(--orange-color), transparent 100%);
-}
-
-.about #sub-bg::before {
-  content: "";
-  opacity: 1;
-  position: absolute;
-  width: 100%;
-  top: -5.5rem;
-  right: 0;
-  border-top-left-radius: 100%;
-  height: 15rem;
-  background: -webkit-gradient(linear, left top, left bottom, from(var(--red-color)), to(transparent));
-  background: linear-gradient(to bottom, var(--red-color), transparent);
 }
 
 .about .about__content[data-scroll="in"] {
@@ -426,7 +386,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-bottom: 40rem;
+  margin-bottom: 30rem;
   z-index: 2;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
@@ -553,8 +513,8 @@ body {
   height: 100%;
   z-index: 1;
   border-radius: 2rem;
-  -webkit-box-shadow: 0.1rem 0.1rem 1.6rem var(--orange-color), -0.1rem -0.1rem 1.6rem var(--orange-color), 0.2rem 0.2rem 1.6rem var(--orange-color), -0.2rem -0.2rem 1.6rem var(--orange-color);
-          box-shadow: 0.1rem 0.1rem 1.6rem var(--orange-color), -0.1rem -0.1rem 1.6rem var(--orange-color), 0.2rem 0.2rem 1.6rem var(--orange-color), -0.2rem -0.2rem 1.6rem var(--orange-color);
+  -webkit-box-shadow: 0.1rem 0.1rem 1.6rem var(--orange-color), -0.1rem -0.1rem 1.6rem var(--orange-color), 0.2rem 0.2rem 1.6rem var(--orange-color), -0.2rem -0.2rem 1.6rem var(--orange-color), inset 0.1rem 0.1rem 1.6rem var(--black-color), inset -0.1rem -0.1rem 1.6rem var(--black-color);
+          box-shadow: 0.1rem 0.1rem 1.6rem var(--orange-color), -0.1rem -0.1rem 1.6rem var(--orange-color), 0.2rem 0.2rem 1.6rem var(--orange-color), -0.2rem -0.2rem 1.6rem var(--orange-color), inset 0.1rem 0.1rem 1.6rem var(--black-color), inset -0.1rem -0.1rem 1.6rem var(--black-color);
 }
 
 .about .about__content:last-child {
@@ -660,9 +620,11 @@ body {
 
 .video .video__content .media {
   position: relative;
-  border: 1rem solid var(--second-color);
+  border: 0.5rem solid var(--second-color);
   border-radius: 10rem;
   overflow: hidden;
+  -webkit-box-shadow: inset 0.1rem 0.1rem 1.6rem var(--black-color), inset -0.1rem -0.1rem 1.6rem var(--black-color);
+          box-shadow: inset 0.1rem 0.1rem 1.6rem var(--black-color), inset -0.1rem -0.1rem 1.6rem var(--black-color);
 }
 
 .video .video__content video {
@@ -802,7 +764,7 @@ body {
     left: -50rem;
   }
   to {
-    left: 0;
+    left: 15rem;
   }
 }
 
@@ -811,7 +773,7 @@ body {
     left: -50rem;
   }
   to {
-    left: 0;
+    left: 15rem;
   }
 }
 
