--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -242,9 +242,11 @@ body {
   width: 100%;
   bottom: 0;
   width: 100%;
-  height: 0.5rem;
-  -webkit-box-shadow: 0 -0.1rem 1.6rem var(--black-color), 0 -0.2rem 1.6rem var(--black-color), 0 -0.5rem 1.6rem var(--black-color), 0 0.1rem 1.6rem var(--black-color);
-          box-shadow: 0 -0.1rem 1.6rem var(--black-color), 0 -0.2rem 1.6rem var(--black-color), 0 -0.5rem 1.6rem var(--black-color), 0 0.1rem 1.6rem var(--black-color);
+  height: 2rem;
+  background: -webkit-gradient(linear, left top, left bottom, from(var(--black-color)), to(transparent));
+  background: linear-gradient(to bottom, var(--black-color), transparent);
+  -webkit-box-shadow: 0 -0.1rem 1.6rem var(--orange-color), 0 -0.2rem 1.6rem var(--orange-color);
+          box-shadow: 0 -0.1rem 1.6rem var(--orange-color), 0 -0.2rem 1.6rem var(--orange-color);
 }
 
 .banner .banner__content {
@@ -304,7 +306,7 @@ body {
   position: absolute;
   width: 50rem;
   height: 70rem;
-  top: 58%;
+  top: 55%;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
 }
