--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -242,11 +242,11 @@ body {
   width: 100%;
   bottom: 0;
   width: 100%;
-  height: 2rem;
+  height: 1rem;
   background: -webkit-gradient(linear, left top, left bottom, from(var(--black-color)), to(transparent));
   background: linear-gradient(to bottom, var(--black-color), transparent);
-  -webkit-box-shadow: 0 -0.1rem 1.6rem var(--orange-color), 0 -0.2rem 1.6rem var(--orange-color);
-          box-shadow: 0 -0.1rem 1.6rem var(--orange-color), 0 -0.2rem 1.6rem var(--orange-color);
+  -webkit-box-shadow: 0 -0.1rem 1.6rem var(--orange-color);
+          box-shadow: 0 -0.1rem 1.6rem var(--orange-color);
 }
 
 .banner .banner__content {
@@ -328,6 +328,7 @@ body {
 
 .about .sub-bg:nth-of-type(2) {
   left: -50rem;
+  top: 15rem;
 }
 
 .about .sub-bg:nth-of-type(3) {
@@ -351,7 +352,7 @@ body {
   position: absolute;
   width: 0;
   height: 1rem;
-  left: -30rem;
+  left: 0rem;
   top: 0;
   background: -webkit-gradient(linear, left top, right top, from(var(--orange-color)), to(var(--red-color)));
   background: linear-gradient(to right, var(--orange-color), var(--red-color));
@@ -364,7 +365,7 @@ body {
 .about .about__content[data-scroll="in"] .content__left span:nth-of-type(2) {
   position: absolute;
   width: 1rem;
-  left: 43.5%;
+  left: 50%;
   top: 0;
   background: -webkit-gradient(linear, left top, right top, from(var(--orange-color)), to(var(--red-color)));
   background: linear-gradient(to right, var(--orange-color), var(--red-color));
@@ -388,16 +389,25 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-bottom: 30rem;
+  margin-bottom: 40rem;
   z-index: 2;
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
+  -webkit-transition: all 1s;
+  transition: all 1s;
   opacity: 0;
   top: 20rem;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .about .about__content .content__left {
-  width: 30%;
+  width: 50rem;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+}
+
+.about .about__content .content__left p {
+  width: 80%;
 }
 
 .about .about__content .content__left .title_sec,
@@ -411,16 +421,17 @@ body {
 
 .about .about__content .content__right {
   position: relative;
-  width: 60rem;
-  height: 60rem;
+  width: 50rem;
+  height: 50rem;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
   opacity: 0;
 }
 
 .about .about__content .content__right img {
   position: absolute;
   width: 100%;
-  height: 65rem;
-  top: -20rem;
+  bottom: 15rem;
   -o-object-fit: cover;
      object-fit: cover;
   z-index: 2;
@@ -429,8 +440,8 @@ body {
 .about .about__content .content__right .tagret {
   position: absolute;
   bottom: 0rem;
-  width: 100%;
   height: 15rem;
+  width: 100%;
   background-color: var(--second-color);
   text-align: center;
   -webkit-box-align: center;
@@ -462,7 +473,6 @@ body {
   bottom: 0rem;
   width: 100%;
   height: 15rem;
-  background-color: transparent;
   text-align: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -474,6 +484,7 @@ body {
 }
 
 .about .about__content .content__right .activity .content {
+  z-index: 2;
   width: 14rem;
   height: 14rem;
   display: -webkit-box;
@@ -527,6 +538,10 @@ body {
   text-align: right;
 }
 
+.about .about__content:last-child .content__left p {
+  margin-left: auto;
+}
+
 .about .about__content:last-child .content__left h2,
 .about .about__content:last-child .content__left p {
   background: -webkit-gradient(linear, right top, left top, from(var(--white-color)), to(var(--gray-color)));
@@ -540,14 +555,14 @@ body {
   position: absolute;
   top: unset;
   left: unset;
-  right: -30rem;
+  right: 0rem;
   bottom: 0;
 }
 
 .about .about__content:last-child .content__left span:nth-of-type(2) {
   position: absolute;
   left: unset;
-  right: 44%;
+  right: 50%;
   top: unset;
   bottom: 0;
   height: 0;
@@ -556,8 +571,9 @@ body {
 .about .about__content .icon {
   position: relative;
   width: 15rem;
-  height: 12rem;
-  margin: 0 15rem;
+  height: 15rem;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
   z-index: 2;
   opacity: 0.2;
   background: -webkit-gradient(linear, left top, right top, from(var(--second-color)), to(var(--second-color)));
@@ -583,8 +599,8 @@ body {
   position: relative;
   top: 20rem;
   opacity: 0;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
+  -webkit-transition: 1s;
+  transition: 1s;
 }
 
 .video[data-scroll="in"] {
@@ -623,14 +639,16 @@ body {
 .video .video__content .media {
   position: relative;
   border: 0.5rem solid var(--second-color);
-  border-radius: 10rem;
+  border-radius: 5rem;
   overflow: hidden;
   -webkit-box-shadow: inset 0.1rem 0.1rem 1.6rem var(--black-color), inset -0.1rem -0.1rem 1.6rem var(--black-color);
           box-shadow: inset 0.1rem 0.1rem 1.6rem var(--black-color), inset -0.1rem -0.1rem 1.6rem var(--black-color);
 }
 
 .video .video__content video {
+  position: relative;
   width: 80%;
+  height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -688,7 +706,7 @@ body {
     width: 0;
   }
   to {
-    width: 65.5%;
+    width: 50%;
   }
 }
 
@@ -697,7 +715,7 @@ body {
     width: 0;
   }
   to {
-    width: 65.5%;
+    width: 50%;
   }
 }
 
@@ -706,7 +724,7 @@ body {
     height: 0;
   }
   to {
-    height: 24rem;
+    height: 17.5rem;
   }
 }
 
@@ -715,7 +733,7 @@ body {
     height: 0;
   }
   to {
-    height: 24rem;
+    height: 17.5rem;
   }
 }
 
@@ -816,6 +834,93 @@ body {
     opacity: 1;
     background: -webkit-gradient(linear, left top, right top, from(var(--orange-color)), to(var(--red-color)));
     background: linear-gradient(to right, var(--orange-color), var(--red-color));
+  }
+}
+
+@media screen and (max-width: 1440px) {
+  .about .about__content .content__right {
+    width: 45rem;
+    height: 45rem;
+  }
+  .about .about__content .content__left {
+    padding-top: 5rem;
+    width: 45rem;
+    height: 45rem;
+  }
+  .about .about__content .icon {
+    width: 11rem;
+    height: 11rem;
+  }
+  .about .about__content .icon svg {
+    width: 5rem;
+    height: 5rem;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .about .about__content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .about .about__content .content__right {
+    width: 50rem;
+    height: 50rem;
+    position: absolute;
+  }
+  .about .about__content:last-child .content__left {
+    text-align: center;
+  }
+  .about .about__content:last-child .content__left .desc_sec {
+    margin-left: unset;
+  }
+  .about .about__content .content__left {
+    text-align: center;
+    width: 100%;
+    margin-top: 55rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .about .about__content .content__left p {
+    width: 50%;
+  }
+  .about .about__content .content__left .title_sec,
+  .about .about__content .content__left .desc_sec {
+    background: -webkit-gradient(linear, left top, left bottom, from(var(--white-color)), to(var(--gray-color))) !important;
+    background: linear-gradient(to bottom, var(--white-color), var(--gray-color)) !important;
+    color: transparent !important;
+    background-clip: text !important;
+    -webkit-background-clip: text !important;
+  }
+  .about .about__content .icon {
+    display: none;
+  }
+  .about .sub-bg:nth-of-type(2),
+  .about .sub-bg:nth-of-type(3) {
+    left: 50%;
+    -webkit-transform: translate(-50%);
+            transform: translate(-50%);
+    top: 20rem;
+  }
+  .about .sub-bg:nth-of-type(3) {
+    bottom: 40rem;
+    top: unset;
+  }
+  .about .about__content[data-scroll="in"] .content__right {
+    -webkit-animation-delay: unset;
+            animation-delay: unset;
   }
 }
 /*# sourceMappingURL=style.css.map */
