--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -877,8 +877,8 @@ body {
     display: none;
   }
   .about .about__content .content__right {
-    width: 40rem;
-    height: 40rem;
+    width: 45rem;
+    height: 45rem;
     position: absolute;
   }
   .about .about__content:last-child .content__left {
@@ -931,9 +931,11 @@ body {
     top: unset;
   }
   .about .about__content[data-scroll="in"] .content__right {
+    opacity: 1;
+    -webkit-animation: unset;
+            animation: unset;
     -webkit-animation-delay: unset;
             animation-delay: unset;
-    animation: unset;
   }
   .video .video__content .text {
     width: 100%;
@@ -944,11 +946,21 @@ body {
 }
 
 @media screen and (max-width: 735px) {
+  body {
+    font-size: 1.6rem;
+  }
+  .title_sec {
+    font-size: 2.5rem;
+  }
   .banner .banner__content h1 {
     font-size: 5rem;
   }
   .banner .banner__content .btn--bg {
     margin-top: 4rem;
+  }
+  .about .about__content .content__right {
+    width: 30rem;
+    height: 30rem;
   }
   @-webkit-keyframes banner1 {
     from {
@@ -965,6 +977,13 @@ body {
     to {
       left: 5rem;
     }
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .about .about__content .content__right {
+    width: 20rem;
+    height: 20rem;
   }
 }
 /*# sourceMappingURL=style.css.map */
